adding coreModules : Network,Config and Utils

--- a/settings.gradle
+++ b/settings.gradle
@@ -14,3 +14,8 @@ dependencyResolutionManagement {
 }
 rootProject.name = "CurrencyConverterTask"
 include ':app'
+include ':core'
+include ':appCore'
+include ':appCore:network'
+include ':appCore:Config'
+include ':appCore:utils'
