--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,13 @@
 plugins {
     id 'com.android.application'
-    id 'org.jetbrains.kotlin.android'
+    id 'kotlin-android'
+    id 'kotlin-kapt'
+    id 'com.google.gms.google-services'
+    id 'com.google.firebase.crashlytics'
+    id 'kotlin-parcelize'
+    id 'dagger.hilt.android.plugin'
+    id 'androidx.navigation.safeargs'
+
 }
 
 android {
@@ -8,14 +15,16 @@ android {
     compileSdk 33
 
     defaultConfig {
-        applicationId "com.example.currencyconvertertask"
-        minSdk 21
-        targetSdk 33
-        versionCode 1
-        versionName "1.0"
+        applicationId = rootProject.ext.get("applicationId")
+        minSdk = rootProject.ext.get("minSdk") as Integer
+        targetSdk = rootProject.ext.get("compileSdk") as Integer
+        versionCode = rootProject.ext.get("versionCode") as Integer
+        versionName = rootProject.ext.get("versionName")
 
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner = rootProject.ext.get("testRunner")
+
     }
+
 
     buildTypes {
         getByName(rootProject.ext.get("debugBuildType")) {
@@ -47,4 +56,20 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
+    //Core Modules
+    implementation project(":appCore:utils")
+    implementation project(":appCore:Config")
+    implementation project(":appCore:network")
+
+    //Retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.8.0'
+
+    //hilt
+    implementation "com.google.dagger:hilt-android:$hilt_version"
+    kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
+
+
 }
