--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,15 +3,18 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <application
+        android:name=".CurrencyApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:name=".CurrencyApplication"
         android:theme="@style/Theme.CurrencyConverterTask"
         tools:targetApi="31">
+        <activity
+            android:name=".CurrencyConverterActivity"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
